fix shelf color with modal dialog.

BUG=745343
TEST=Open save pdf dialog and observe that shelf
  does not change color.

Review-Url: https://codereview.chromium.org/2985453003
Cr-Commit-Position: refs/heads/master@{#489725}