ash/wm/focus_rules.cc
@@ -10,6 +10,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/shell_delegate.h"
 #include "ash/wm/window_state.h"
 #include "ui/aura/window.h"
+#include "ui/wm/public/activation_delegate.h"
 
 namespace ash {
 
@@ -30,8 +31,15 @@ bool IsWindowConsideredActivatable(aura::Window* window) {
   if (!IsToplevelWindow(window))
     return false;
 
-  // The window must be visible.
-  return IsWindowConsideredVisibleForActivation(window);
+  if (!IsWindowConsideredVisibleForActivation(window))
+    return false;
+
+  if (::wm::GetActivationDelegate(window) &&
+      !::wm::GetActivationDelegate(window)->ShouldActivate()) {
+    return false;
+  }
+
+  return window->CanFocus();
 }
 
 bool IsWindowConsideredVisibleForActivation(aura::Window* window) {
